Fix plans baseline alignment

--- a/style.css
+++ b/style.css
@@ -1198,7 +1198,6 @@ footer.layer {
         width:27.95%;
         margin:0 7.6923077% 0 0;
         display:inline-block;
-        float:left;
     }
     .third:nth-of-type(3) {
         margin-right:0;
